--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,11 +1,15 @@
 <div class="row g-4 py-3">
+<% if false %>
   <h2 class="pb-2 border-bottom">Side Projects</h2>
+<% end %>
   <div class="row g-3 py-1 row-cols-1 row-cols-lg-3">
 <% @works.each do |work|  %>
   <%= render 'feature_col', work: work %>
 <% end %>
   </div>
 <div>
+
+<% if false %>
 <div class="row g-4 py-5">
   <h2 class="pb-2 border-bottom">商業作品</h2>
   <div class="row g-3 py-1 row-cols-1 row-cols-lg-3">
@@ -14,3 +18,4 @@
 <% end %>
   </div>
 <div>
+<% end %>
