--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,13 +1,13 @@
 <div class="row g-5">
   <article class="about">
     <h2 class="display-5 link-body-emphasis mb-1">聯絡我</h2>
-    <%= image_tag '', fake: true, width: '100%' %>
-    <h2>聯絡我注意事項</h2>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <h3>Sub-heading</h3>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <pre><code>Example code block</code></pre>
-    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+    <%== @contact_note.content_zh %>
+    <%= link_to 'https://github.com/friday1029', target: '_blank' do %>
+      <%= image_pack_tag 'github.svg', class: 'bi', width: 30, height: 30 %>
+    <% end %>
+        <%= link_to 'https://www.linkedin.com/in/friday1029/', target: '_blank' do %>
+      <%= image_pack_tag 'linkedin.svg', class: 'bi', width: 30, height: 30 %>
+    <% end %>
   </article>
 </div>
 <hr class="my-4">
