adjust carouse to dark controls / adjust work index page

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -3,7 +3,7 @@
 <% title_col = col_names[:title].presence || 'title' # 預設欄位名為 title %>
 <% subtitle_col = col_names[:subtitle].presence || 'subtitle' # 預設欄位名為 subtitle %>
 
-<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" data-bs-theme="light">
+<div id="myCarousel" class="carousel carousel-dark slide mb-6" data-bs-ride="carousel" data-bs-theme="dark">
   <div class="carousel-indicators">
 <% carousel_items.size.times.each do |i| %>
   <% if i == 0 %>
