--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>大衛的部落格後台</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= favicon_link_tag 'favicons/favicon.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
   </head>
