feat: add published to Post

--- a/app/views/admins/posts/index.html.erb
+++ b/app/views/admins/posts/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>ID</th>
+      <th>is puplished</th>
       <th>Cover image</th>
       <th>Title zh</th>
       <th>Title en</th>
@@ -19,6 +20,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.id %></td>
+        <td><%= post.is_published %></td>
         <td><%= image_tag(post.cover_image_url, height: 100) %></td>
         <td><%= post.title_zh %></td>
         <td><%= post.title_en %></td>
