--- a/app/views/admins/posts/show.html.erb
+++ b/app/views/admins/posts/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>is top</strong>
+  <%= @post.is_top %>
+</p>
+
+<p>
   <strong>Title zh:</strong>
   <%= @post.title_zh %>
 </p>
