--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,5 +1,7 @@
 <div class="card shadow-sm">
-  <%= image_tag post.cover_image_url, fake: true, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
+  <%= link_to post_path(post) do %>
+    <%= image_tag post.cover_image_url, fake: true, width: '100%', height: 225, class: 'bd-placeholder-img card-img-top' %>
+  <% end %>
   <div class="card-body">
     <h5 class="card-title"><%= post.title_zh %></h5>
     <p class="card-text" style="height: 4rem"><%= post.intro_zh.truncate(50) %></p>
